# rules_go-issue-3033

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE
